--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -93,7 +93,7 @@ BuildRequires: librsvg2-devel
 %define SFDP 1
 BuildRequires: gts-devel
 %define SMYRNA 1
-BuildRequires: gtkglarea2-devel gtkglext-devel freeglut-devel
+BuildRequires: libglade2-devel gtkglarea2-devel gtkglext-devel freeglut-devel
 %endif
 %if %rhel >= 6
 %define PHP 1
@@ -150,7 +150,7 @@ BuildRequires: perl-devel perl-libs
 BuildRequires: gd gd-devel
 %define SMYRNA 1
 BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel
-BuildRequires: freeglut-devel gts-devel
+BuildRequires: libglade2-devel freeglut-devel gts-devel
 %endif
 %endif
 
@@ -214,7 +214,7 @@ BuildRequires: lasi-devel
 %define R_LANG 1
 BuildRequires: R-devel swig >= 1.3.33 perl-libs
 %define SMYRNA 1
-BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel freeglut-devel
+BuildRequires: libglade2-devel gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel freeglut-devel
 #define GLITZ 1
 # BuildRequires: glitz-devel
 %endif
@@ -280,7 +280,7 @@ BuildRequires: gd gd-devel perl-devel DevIL-devel lasi-devel
 %define R_LANG 1
 BuildRequires: R-devel swig >= 1.3.33 perl-libs
 %define SMYRNA 1
-BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel
+BuildRequires: libglade2-devel gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel
 BuildRequires: freeglut-devel gts-devel
 #define GLITZ 1
 # BuildRequires: glitz-devel
