--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -41,7 +41,7 @@ noinst_HEADERS = btree.h draw.h filter.h glexpose.h glmotion.h gltemplate.h \
 	topfisheyeview.h viewportcamera.h gvprpipe.h md5.h drawxdot.h arcball.h \
 	gui/beacon.h gui/callbacks.h gui/datalistcallbacks.h gui/filterscallbacks.h \
 	gui/frmobjectui.h gui/glcompui.h gui/gui.h gui/menucallbacks.h \
-	gui/toolboxcallbacks.h gui/topviewsettings.h gui/appmouse.h
+	gui/toolboxcallbacks.h gui/topviewsettings.h gui/appmouse.h polytess.h smyrna_utils.h
 
 smyrna_SOURCES = btree.c draw.c filter.c glexpose.c glmotion.c gltemplate.c \
 	hier.c main.c selection.c support.c template.c topview.c topviewdata.c \
@@ -49,7 +49,7 @@ smyrna_SOURCES = btree.c draw.c filter.c glexpose.c glmotion.c gltemplate.c \
 	gvprpipe.c md5.c drawxdot.c arcball.c hotkeymap.c \
 	gui/beacon.c gui/callbacks.c gui/datalistcallbacks.c gui/filterscallbacks.c \
 	gui/frmobjectui.c gui/glcompui.c gui/gui.c gui/menucallbacks.c \
-	gui/toolboxcallbacks.c gui/topviewsettings.c gui/appmouse.c
+	gui/toolboxcallbacks.c gui/topviewsettings.c gui/appmouse.c polytess.c smyrna_utils.c
 
 smyrna_LDADD = $(top_builddir)/lib/cgraph/libcgraph_C.la \
 		$(top_builddir)/lib/cdt/libcdt_C.la \
