add diffimg.1 and vimdot.1 man pages provided by: 		David Claughton <dave@eclecticdave.com>

--- a/contrib/diffimg/Makefile.am
+++ b/contrib/diffimg/Makefile.am
@@ -5,6 +5,11 @@ VERSION=0.2
 
 AM_CPPFLAGS = @GD_INCLUDES@
 
+pdfdir = $(pkgdatadir)/doc/pdf
+
+man_MANS = diffimg.1
+pdf_DATA = diffimg.1.pdf
+
 if WITH_LIBGD
 bin_PROGRAMS = diffimg
 endif
@@ -19,6 +24,9 @@ else
 diffimg_LDADD = @GD_LIBS@ @MATH_LIBS@
 endif
 
+diffimg.1.pdf: $(srcdir)/diffimg.1
+        - $(GROFF) -Tps -man $(srcdir)/dot.1 | $(PS2PDF) - - >diffimg.1.pdf
+
 GRAPH = "digraph G { hello -> world }"
 
 test: diffimg
@@ -29,4 +37,5 @@ test: diffimg
 	if `./diffimg hello1.png hello2.png >test2.png`;then echo same;else echo different;fi
 
 CLEANFILES = *.png
-EXTRA_DIST = diffimg.vcproj
+EXTRA_DIST = diffimg.vcproj diffimg.1 diffimg.1.pdf
+DISTCLEANFILES = diffimg.1.pdf
