fix cut&paste bugs

--- a/contrib/diffimg/Makefile.am
+++ b/contrib/diffimg/Makefile.am
@@ -25,7 +25,7 @@ diffimg_LDADD = @GD_LIBS@ @MATH_LIBS@
 endif
 
 diffimg.1.pdf: $(srcdir)/diffimg.1
-        - $(GROFF) -Tps -man $(srcdir)/dot.1 | $(PS2PDF) - - >diffimg.1.pdf
+	- $(GROFF) -Tps -man $(srcdir)/diffimg.1 | $(PS2PDF) - - >diffimg.1.pdf
 
 GRAPH = "digraph G { hello -> world }"
 
