--- a/lib/cdt/cdt.vcproj
+++ b/lib/cdt/cdt.vcproj
@@ -259,6 +259,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dttreeset.c"
+				>
+			</File>
+			<File
 				RelativePath=".\dtview.c"
 				>
 			</File>
