set WITH_LIBGD properly if gd library no good

--- a/configure.ac
+++ b/configure.ac
@@ -2490,6 +2490,7 @@ else
         ],[
           AC_MSG_WARN(Optional GD library not available)
           use_gd="No (library not found)"
+	  with_libgd="no"
         ], $GD_LIBS)
       fi
       LDFLAGS=$save_LDFLAGS
