apply patch from David Claughton <dave@eclecticdave.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1408,7 +1408,9 @@ else
       else
         RUBY_INCLUDES="-I`$RUBY $srcdir/config/config_ruby.rb INCLUDES`"
 	# hack for powerpc-darwin8 (10.4)
-	RUBY_INCLUDES=`echo $RUBY_INCLUDES | sed 's/powerpc/universal/'`
+	if test "x$DARWIN" = "xyes"; then
+	  RUBY_INCLUDES=`echo $RUBY_INCLUDES | sed 's/powerpc/universal/'`
+	fi
         RUBY_LIBS="-L`$RUBY $srcdir/config/config_ruby.rb lib` `$RUBY -rrbconfig -e \"puts Config::CONFIG[['LIBRUBYARG_SHARED']]\"`"
         RUBY_INSTALL_DIR="`$RUBY $srcdir/config/config_ruby.rb archsitelib`"
         save_CPPFLAGS=$CPPFLAGS
