--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -35,25 +35,25 @@ bin_PROGRAMS += smyrna_static
 endif
 endif
 
-noinst_HEADERS = btree.h draw.h filter.h glexpose.h glmotion.h gltemplate.h \
-	hier.h materials.h smyrnadefs.h support.h topview.h selection.h \
-	topviewdata.h topviewdefs.h trackball.h tvnodes.h viewport.h hotkeymap.h \
-	topfisheyeview.h viewportcamera.h gvprpipe.h md5.h drawxdot.h arcball.h \
-	selectionfuncs.h topviewfuncs.h polytess.h smyrna_utils.h \
-	gui/callbacks.h gui/datalistcallbacks.h gui/filterscallbacks.h \
-	gui/frmobjectui.h gui/glcompui.h gui/gui.h gui/menucallbacks.h \
-	gui/toolboxcallbacks.h gui/topviewsettings.h gui/appmouse.h \
-	gui/beacon.h
+noinst_HEADERS = arcball.h btree.h draw.h drawxdot.h filter.h glexpose.h \
+	glmotion.h gltemplate.h gui/appmouse.h gui/beacon.h gui/callbacks.h \
+	hotkeymap.h materials.h md5.h polytess.h selection.h selectionfuncs.h \
+	smyrna_utils.h smyrnadefs.h support.h topfisheyeview.h topview.h \
+	topviewdata.h topviewdefs.h topviewfuncs.h trackball.h tvnodes.h \
+	viewport.h viewportcamera.h  \
+	gui/datalistcallbacks.h gui/filterscallbacks.h gui/frmobjectui.h \
+	gui/glcompui.h gui/glmenu.h gui/gui.h gui/menucallbacks.h \
+	gui/toolboxcallbacks.h gui/topviewsettings.h gvprpipe.h hier.h
 
-smyrna_SOURCES = btree.c draw.c filter.c glexpose.c glmotion.c gltemplate.c \
-	hier.c main.c support.c template.c topviewdata.c selection.c \
-	topfisheyeview.c trackball.c tvnodes.c viewport.c viewportcamera.c \
-	selectionfuncs.c topviewfuncs.c topview.c polytess.c smyrna_utils.c \
-	gvprpipe.c md5.c drawxdot.c arcball.c hotkeymap.c \
-	gui/callbacks.c gui/datalistcallbacks.c gui/filterscallbacks.c \
-	gui/frmobjectui.c gui/glcompui.c gui/gui.c gui/menucallbacks.c \
-	gui/toolboxcallbacks.c gui/topviewsettings.c gui/appmouse.c \
-	gui/beacon.c
+smyrna_SOURCES = arcball.c btree.c draw.c drawxdot.c filter.c glexpose.c \
+	glmotion.c gltemplate.c gui/appmouse.c gui/beacon.c gui/callbacks.c \
+	gvprpipe.c hier.c hotkeymap.c main.c md5.c polytess.c selection.c \
+	selectionfuncs.c smyrna_utils.c support.c template.c topfisheyeview.c \
+	topview.c topviewdata.c topviewfuncs.c trackball.c tvnodes.c \
+	viewport.c viewportcamera.c \
+	gui/datalistcallbacks.c gui/filterscallbacks.c gui/frmobjectui.c \
+	gui/glcompui.c gui/glmenu.c gui/gui.c gui/menucallbacks.c \
+	gui/toolboxcallbacks.c gui/topviewsettings.c
 
 smyrna_LDADD = $(top_builddir)/lib/cgraph/libcgraph_C.la \
 		$(top_builddir)/lib/cdt/libcdt_C.la \
