--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -36,23 +36,23 @@ endif
 endif
 
 noinst_HEADERS = arcball.h btree.h draw.h drawxdot.h filter.h glexpose.h \
-	glmotion.h gltemplate.h gui/appmouse.h gui/beacon.h gui/callbacks.h \
-	hotkeymap.h materials.h md5.h polytess.h selection.h selectionfuncs.h \
-	smyrna_utils.h smyrnadefs.h support.h topfisheyeview.h topview.h \
+	glmotion.h gltemplate.h gui/appmouse.h gui/callbacks.h \
+	hotkeymap.h materials.h md5.h polytess.h selectionfuncs.h \
+	smyrna_utils.h smyrnadefs.h support.h topfisheyeview.h \
 	topviewdata.h topviewdefs.h topviewfuncs.h trackball.h tvnodes.h \
 	viewport.h viewportcamera.h  \
 	gui/datalistcallbacks.h gui/filterscallbacks.h gui/frmobjectui.h \
-	gui/glcompui.h gui/glmenu.h gui/gui.h gui/menucallbacks.h \
+	gui/glcompui.h gui/gui.h gui/menucallbacks.h \
 	gui/toolboxcallbacks.h gui/topviewsettings.h gvprpipe.h hier.h
 
 smyrna_SOURCES = arcball.c btree.c draw.c drawxdot.c filter.c glexpose.c \
-	glmotion.c gltemplate.c gui/appmouse.c gui/beacon.c gui/callbacks.c \
-	gvprpipe.c hier.c hotkeymap.c main.c md5.c polytess.c selection.c \
+	glmotion.c gltemplate.c gui/appmouse.c gui/callbacks.c \
+	gvprpipe.c hier.c hotkeymap.c main.c md5.c polytess.c \
 	selectionfuncs.c smyrna_utils.c support.c template.c topfisheyeview.c \
-	topview.c topviewdata.c topviewfuncs.c trackball.c tvnodes.c \
+	topviewdata.c topviewfuncs.c trackball.c tvnodes.c \
 	viewport.c viewportcamera.c \
 	gui/datalistcallbacks.c gui/filterscallbacks.c gui/frmobjectui.c \
-	gui/glcompui.c gui/glmenu.c gui/gui.c gui/menucallbacks.c \
+	gui/glcompui.c gui/gui.c gui/menucallbacks.c \
 	gui/toolboxcallbacks.c gui/topviewsettings.c
 
 smyrna_LDADD = $(top_builddir)/lib/cgraph/libcgraph_C.la \
