try to fix build problem on centos4

--- a/configure.ac
+++ b/configure.ac
@@ -544,7 +544,8 @@ if test "x$no_x" = "xyes"; then
   X_SUBDIRS=""
 else
   use_xlib="Yes"
-  PKG_CHECK_MODULES(X11, [x11])
+#no x11.pc on centos4
+#  PKG_CHECK_MODULES(X11, [x11])
   PKG_CHECK_MODULES(XRENDER, [xrender])
 fi
 AM_CONDITIONAL(WITH_X, [test "x$use_xlib" = "xYes"])
