migrating to visual studio 2008

--- a/lib/fdpgen/gvfdpgen.vcproj
+++ b/lib/fdpgen/gvfdpgen.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="fdpgen"
 	ProjectGUID="{5EC4407D-0DCD-47E0-9FDB-09011EFA6382}"
 	RootNamespace="gvfdpgen"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
