--- a/lib/sfio/sfio.vcproj
+++ b/lib/sfio/sfio.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="sfio"
 	ProjectGUID="{7DC8987A-C87D-465A-94CF-1F6DF59B38FB}"
 	RootNamespace="sfio"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
