--- a/lib/topfish/topfish.vcproj
+++ b/lib/topfish/topfish.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="topfish"
 	ProjectGUID="{3CD86498-8B4C-4018-A9BF-F9E008F376DD}"
 	RootNamespace="topfish"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
