--- a/lib/twopigen/gvtwopigen.vcproj
+++ b/lib/twopigen/gvtwopigen.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="twopigen"
 	ProjectGUID="{24E8C882-CD11-475A-A383-FF52AC05DFE3}"
 	RootNamespace="gvtwopigen"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
