--- a/lib/ast/ast.vcproj
+++ b/lib/ast/ast.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="ast"
 	ProjectGUID="{7D3723C5-06C8-4730-BDA1-1B61D6CCBEB8}"
 	RootNamespace="ast"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
