--- a/lib/circogen/gvcircogen.vcproj
+++ b/lib/circogen/gvcircogen.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="circogen"
 	ProjectGUID="{3A011065-B75E-49C8-B480-1A7C8EBD6699}"
 	RootNamespace="gvcircogen"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
