--- a/lib/dotgen/gvdotgen.vcproj
+++ b/lib/dotgen/gvdotgen.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="dotgen"
 	ProjectGUID="{4B6103EF-590B-4916-92CB-D06934459928}"
 	RootNamespace="gvdotgen"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
