--- a/lib/expr/expr.vcproj
+++ b/lib/expr/expr.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="expr"
 	ProjectGUID="{5A6981A7-A652-4187-B636-3E5120C7CE52}"
 	RootNamespace="expr"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
