--- a/lib/gd/gd.vcproj
+++ b/lib/gd/gd.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="gd"
 	ProjectGUID="{05BE968C-B4F4-4B5F-AC4F-C6F8585023BC}"
 	RootNamespace="gd"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
