--- a/lib/glcomp/glcomp.vcproj
+++ b/lib/glcomp/glcomp.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="glcomp"
 	ProjectGUID="{CCEF85C9-BC40-4C26-8755-581276C8B7DA}"
 	RootNamespace="glcomp"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
