--- a/lib/ingraphs/ingraphs.vcproj
+++ b/lib/ingraphs/ingraphs.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="ingraphs"
 	ProjectGUID="{D6FD0DE5-5305-458E-8CA5-FCA4B8E05B04}"
 	RootNamespace="ingraphs"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
