--- a/lib/osage/osage.vcproj
+++ b/lib/osage/osage.vcproj
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="osage"
 	ProjectGUID="{8E82D6BD-74D0-48C3-887A-1754EA71DA5A}"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
