--- a/lib/patchwork/gvpatchwork.vcproj
+++ b/lib/patchwork/gvpatchwork.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="patchwork"
 	ProjectGUID="{6BD77BDE-151D-4824-A8BC-9F067662F7AB}"
 	RootNamespace="gvpatchwork"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
