--- a/lib/rbtree/rbtree.vcproj
+++ b/lib/rbtree/rbtree.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="rbtree"
 	ProjectGUID="{D6CEB142-BF8E-471C-AE16-4300F2D5DEDA}"
 	RootNamespace="rbtree"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
