--- a/lib/sfdpgen/sfdp.vcproj
+++ b/lib/sfdpgen/sfdp.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="sfdp"
 	ProjectGUID="{443EB1A7-C634-4292-9F2D-C752BB2BF40F}"
 	RootNamespace="sfdp"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
