--- a/lib/vpsc/vpsc.vcproj
+++ b/lib/vpsc/vpsc.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="vpsc"
 	ProjectGUID="{2F5A730B-132C-4319-A1B3-DCBE05E2E1B1}"
 	RootNamespace="vpsc"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
