--- a/lib/xdot/xdot.vcproj
+++ b/lib/xdot/xdot.vcproj
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="xdot"
 	ProjectGUID="{C99C1195-2032-408B-9822-F09F49006A3C}"
 	RootNamespace="xdot"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
