--- a/lib/gvc/Makefile.old
+++ b/lib/gvc/Makefile.old
@@ -7,6 +7,7 @@ INCS =  -I. \
         -I$(ROOT) \
         -I../cdt \
         -I../pathplan \
+        -I../xdot \
 	-I../graph \
 	-I../common \
 	$(EXTLIB_INC)
@@ -39,6 +40,16 @@ install: libgvc.a libgvc_dot_builtins.a
 	$(INSTALL) libgvc.a libgvc_dot_builtins.a $(LIBDIR)
 
 $(OBJS) $(EXTRA_OBJS): $(INST_HDRS) $(NOINST_HDRS)
+
+gvcontext.o : $(ROOT)/config.h $(ROOT)/builddate.h
+
+$(ROOT)/config.h $(ROOT)/builddate.h : renew
+
+renew :
+	(D=`date`; echo "#define BUILDDATE \"$$D\"" > $(ROOT)/builddate.h)
+	(VM=`awk '/m4_define\(graphviz_version_major/ {print $$2}' $(ROOT)/configure.ac`; VM=$${VM%\)}; \
+	 Vm=`awk '/m4_define\(graphviz_version_minor/ {print $$2}' $(ROOT)/configure.ac`; Vm=$${Vm%\)}; \
+    sed "s/define VERSION.*/define VERSION \"$$VM.$$Vm.0\"/" $(ROOT)/config.h > out; mv out $(ROOT)/config.h)
 
 clean:
 	$(RM) core *.o
