incorporate "graphvizz-sparc64.patch" from fedora distro.

--- a/configure.ac
+++ b/configure.ac
@@ -100,7 +100,7 @@ LIBPOSTFIX=
 case "${host_os}" in
   *linux* )
     case "${host_cpu}" in
-      powerpc64 | s390x | x86_64 )
+      powerpc64 | s390x | x86_64 | sparc64 )
         LIBPOSTFIX="64"
         ;;
     esac
