this might be the problem...

--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -22,6 +22,7 @@ AM_CPPFLAGS = \
         -I$(top_srcdir)/lib/topfish \
         -I$(top_srcdir)/lib/gvpr \
         -I$(top_srcdir)/lib/common \
+        -I$(top_srcdir)/cmd/smyrna \
         -I$(top_srcdir)/cmd/smyrna/gui \
 	$(GTK_CFLAGS) $(GLUT_CFLAGS) $(GTKGLEXT_CFLAGS) $(GLADE_CFLAGS) $(FREETYPE2_CFLAGS) $(FONTCONFIG_CFLAGS) $(GTS_CFLAGS)
 
