add support.h to distribution - hopefully fix the build breakage

--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -40,7 +40,7 @@ noinst_HEADERS = arcball.h draw.h glexpose.h \
 	hotkeymap.h materials.h md5.h polytess.h selectionfuncs.h \
 	smyrna_utils.h smyrnadefs.h topfisheyeview.h \
 	topviewdefs.h topviewfuncs.h trackball.h tvnodes.h \
-	viewport.h viewportcamera.h  \
+	viewport.h viewportcamera.h support.h \
 	gui/datalistcallbacks.h gui/frmobjectui.h \
 	gui/glcompui.h gui/gui.h gui/menucallbacks.h \
 	gui/toolboxcallbacks.h gui/topviewsettings.h gvprpipe.h hier.h
